# EmbodiChain

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  ATOMIC_ACTION.md  CARTESIAN_SPACE_VISUALIZATION_ENHANCEMENT.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORSmd  MANIFEST.in  README.md  conftest.py  index.html  pyproject.toml  reproduce.sh  run_benchmark.py  setup.py  test_get_robot_suface_point.py  versions.json
.claude/plans/: curobo-self-generated-yaml-only.md  curobo-world-yaml-from-rigid-objects.md  curobo-yaml-generator.md  episode-obs-design.md
.claude/skills/: pr  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
1779962412_gym_project/: gym_config.json  gym_export_manifest.json
agent_context/: MAP.yaml
benchmark/: config.py  leaderboard.py  metrics.py  reporting.py  runner.py  runtime.py
design/: newton-backend-design.md
docker/: docker_run.sh
docs/: Makefile  RL_TRAINING_FRAMEWORK.md  VLA_INTEGRATION_GUIDE.md  plane_sampling_configuration_guide.md  plane_sampling_optimization.md  requirements.txt  rl_training_guide.md  sync_readme.py
embodichain/: __init__.py  __main__.py  env.py  preview_asset.py  run_env.py
embodichain_tasks/: README.md  pyproject.toml
embodichain_tasks/configs/agents/rl/basic/cart_pole/: gym_config.json  gym_config.yaml  train_config.json  train_config.yaml  train_config_grpo.json  train_config_grpo.yaml
embodichain_tasks/configs/agents/rl/push_cube/: gym_config.json  train_config.json  train_config_grpo.json
embodichain_tasks/configs/gym/: cobotmagic.yaml  dexforce_w1.json  dexforce_w1.yaml
embodichain_tasks/configs/gym/action_bank/: conf.json
embodichain_tasks/configs/gym/agent/pour_water_agent/: fast_gym_config.json  task_prompt.txt
embodichain_tasks/configs/gym/blocks_ranking_rgb/: cobot_magic_3cam.json
embodichain_tasks/configs/gym/blocks_ranking_size/: cobot_magic_3cam.json
embodichain_tasks/configs/gym/match_object_container/: cobot_magic_3cam.json
embodichain_tasks/configs/gym/place_object_drawer/: cobot_magic_3cam.json
embodichain_tasks/configs/gym/pour_water/: action_config.json
embodichain_tasks/configs/gym/scoop_ice/: gym_config.json
embodichain_tasks/configs/gym/special/: simple_task_ur10.json
embodichain_tasks/configs/gym/stack_blocks_two/: cobot_magic_3cam.json
embodichain_tasks/embodichain_tasks/: __init__.py
embodichain_tasks/embodichain_tasks/rl/: __init__.py
embodichain_tasks/embodichain_tasks/rl/basic/: cart_pole.py
embodichain_tasks/embodichain_tasks/tableware/: base_agent_env.py  blocks_ranking_rgb.py  match_object_container.py  place_object_drawer.py  rearrangement.py  stack_blocks_two.py  stack_cups.py
embodichain_tasks/embodichain_tasks/tableware/pour_water/: action_bank.py  pour_water.py
embodichain_tasks/embodichain_tasks/utils/: __init__.py  importer.py
examples/: cartesian_space_reachability_visualization.py  workspace_analyzer_visualization_fixed.py
main/: genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
robot_challenge_tasks/: .gitignore  README.md  pyproject.toml
scripts/: data_gen.sh  pour_water_v3.sh  scoop_ice_run_env.sh  test_whole_body_ik.py  visualize_origin.py  visualize_whole_body_ik.py  visualize_whole_body_ik_robot.py  vram_tracker.py  warp_trajectory.sh
tests/: common.py  conftest.py  test_record_camera_async.py  unitest.sh
(+1872 files in other folders)
