[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodichain_tasks"
version = "0.0.1"
description = "Official task environments for EmbodiChain"
requires-python = ">=3.10"
dependencies = [
    "embodichain",
]

[project.entry-points."embodichain.tasks"]
"embodichain_tasks" = "embodichain_tasks"

[tool.setuptools.packages.find]
include = ["embodichain_tasks*"]
